--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 /src/mocks/response.json
+/src/mocks/flop_allin.json
 
 # dependencies
 /node_modules
